Prevent kernel name wrapping

--- a/styles/jupyter-next.less
+++ b/styles/jupyter-next.less
@@ -108,6 +108,7 @@
 
       .kernel-name {
         color: @text-color;
+        white-space: nowrap;
       }
     }
   }
